test/functions/ferguson/error-return-parentclass.good
error-return-parentclass.chpl:14: In function 'f':
error-return-parentclass.chpl:15: error: type mismatch in assignment from Parent to Child
